grafana/full/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/infra
                    operator: In
                    values: [""]
      tolerations:
        - key: "node-role.kubernetes.io/infra"
          operator: "Equal"
          value: ""
          effect: "NoSchedule"
      containers:
        - name: grafana
          image: grafana/grafana-oss:12.2.0-17142428006-ubuntu
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: custom-ca
              mountPath: /etc/ssl/certs/okbtsp-ca.crt
              subPath: okbtsp-ca.crt
              readOnly: true
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: grafana-storage
          emptyDir: {}
        - name: custom-ca
          configMap:
            name: custom-ca-certificates
